Added new navbar and dropdown functionality for mobile friendliness. Added fix for font size overflowing in project cards.

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,46 @@
 </head>
 
 <body>
-
     <div class="wrapper">
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Grayson Gantek</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./portfolio.html">All Projects</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="./portfolio.html#proj-1">Project 1</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-2">Project 2</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-3">Project 3</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-4">Project 4</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-5">Project 5</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-6">Project 6</a>
+                        </div>
+                    </li>
                 </ul>
+                <div class="dropdown-divider"></div>
+                <span class="navbar-text">
+                    <em>Designer and Developer</em>
+                </span>
             </div>
         </nav>
-    
+
         <div class="row-12 max-width">
             <div id="about-col" class="col-12">
                 <div class="row">
@@ -43,67 +64,69 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container">
+                        <a href="#" class="single-project-container" id="proj-1">
                             <figure class="mb-4">
                                 <img src="./images/mountains1.jpg" alt="mountains1">
                                 <figcaption>
                                     <h2>Project one</h2>
-                                    <p>Project one's description. Lorem ipsum dolor sit amet.</p>
+                                    <p class="text-muted">Project one's description. Lorem ipsum dolor sit amet.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container">
+                        <a href="#" class="single-project-container" id="proj-2">
                             <figure class="mb-4">
                                 <img src="./images/mountains2.jpg" alt="mountains1">
                                 <figcaption>
                                     <h2>Project two</h2>
-                                    <p>Project two's description. Lorem ipsum dolor sit amet.</p>
+                                    <p class="text-muted">Project two's description. Lorem ipsum dolor sit amet.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container">
+                        <a href="#" class="single-project-container" id="proj-3">
                             <figure class="mb-4">
                                 <img src="./images/mountains3.jpg" alt="mountains1">
                                 <figcaption>
                                     <h2>Project three</h2>
-                                    <p>Project three's description. Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                                    <p class="text-muted">Project three's description. Lorem, ipsum dolor sit amet consectetur adipisicing.
+                                    </p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container">
+                        <a href="#" class="single-project-container" id="proj-4">
                             <figure class="mb-4">
                                 <img src="./images/mountains4.jpg" alt="mountains1">
                                 <figcaption>
                                     <h2>Project four</h2>
-                                    <p>Project four's description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non.</p>
+                                    <p class="text-muted">Project four's description. Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Non.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container">
+                        <a href="#" class="single-project-container" id="proj-5">
                             <figure class="mb-4">
                                 <img src="./images/mountains1.jpg" alt="mountains1">
                                 <figcaption>
                                     <h2>Project five</h2>
-                                    <p>Project five's description. Lorem, ipsum dolor.</p>
+                                    <p class="text-muted">Project five's description. Lorem, ipsum dolor.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container">
+                        <a href="#" class="single-project-container" id="proj-6">
                             <figure class="mb-4">
                                 <img src="./images/mountains2.jpg" alt="mountains1">
                                 <figcaption>
                                     <h2>Project six</h2>
-                                    <p>Project six's description. Lorem ipsum dolor sit amet.</p>
+                                    <p class="text-muted">Project six's description. Lorem ipsum dolor sit amet.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -117,9 +140,15 @@
         Copyright &copy; 2019 Grayson Gantek.
     </footer>
 
-    <script> </script>
-    <!--Empty script to fix animations playing on load, chrome bug-->
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
