--- a/contact.html
+++ b/contact.html
@@ -13,29 +13,52 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+        integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
 </head>
 
 <body>
 
     <div class="wrapper">
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Grayson Gantek</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="./contact.html">Contact <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./portfolio.html">All Projects</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="./portfolio.html#proj-1">Project 1</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-2">Project 2</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-3">Project 3</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-4">Project 4</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-5">Project 5</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-6">Project 6</a>
+                        </div>
                     </li>
                 </ul>
+                <div class="dropdown-divider"></div>
+                <span class="navbar-text">
+                    <em>Designer and Developer</em>
+                </span>
             </div>
         </nav>
-    
+
         <div class="row-12 max-width">
             <div class="col">
                 <div class="row">
@@ -73,12 +96,14 @@
                         <p>I usually respond within a day or two.</p>
                         <hr>
                         <p>Find me on these sites:</p>
-                        <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i class="fab fa-behance-square" style="font-size: 3rem; padding-right: 10px;"></i></a>
-                        <a href="http://www.linkedin.com/in/graysongantek" target="_blank" class="social-icon"><i class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
+                        <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i
+                                class="fab fa-behance-square" style="font-size: 3rem; padding-right: 10px;"></i></a>
+                        <a href="http://www.linkedin.com/in/graysongantek" target="_blank" class="social-icon"><i
+                                class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
                     </div>
                 </div>
             </div>
-    
+
         </div>
     </div>
 
@@ -86,8 +111,15 @@
         Copyright &copy; 2019 Grayson Gantek.
     </footer>
 
-    <script> </script> <!--Empty script to stop animations from autoplaying on load; chrome bug-->
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
