--- a/index.html
+++ b/index.html
@@ -17,20 +17,42 @@
 <body>
 
     <div class="wrapper">
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Grayson Gantek</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="./index.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./portfolio.html">All Projects</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="./portfolio.html#proj-1">Project 1</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-2">Project 2</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-3">Project 3</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-4">Project 4</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-5">Project 5</a>
+                            <a class="dropdown-item" href="./portfolio.html#proj-6">Project 6</a>
+                        </div>
+                    </li>
                 </ul>
+                <div class="dropdown-divider"></div>
+                <span class="navbar-text">
+                    <em>Designer and Developer</em>
+                </span>
             </div>
         </nav>
 
@@ -84,6 +106,16 @@
     <footer class="bg-dark text-center text-light text-muted py-4 mt-4">
         Copyright &copy; 2019 Grayson Gantek.
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
