Added fix for hover effect on mobile on projects page. Also changed wording on the p tags for the contact page.

--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,7 @@
                         </form>
                     </div>
                     <div class="col-12 col-md-4 text-muted text-right" id="contact-aside">
-                        <p>Feel free to contact me at any time.</p>
-                        <p>I usually respond within a day or two.</p>
+                        <p>Feel free to contact me at any time. I usually respond within a day or two.</p>
                         <hr>
                         <p>Find me on these sites:</p>
                         <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i
