--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="contact-text-area">Message</label>
-                                <textarea class="form-control" id="contact-text-area" rows="6"></textarea>
+                                <textarea class="form-control" id="contact-text-area" rows="6" placeholder="Your message here"></textarea>
                             </div>
                             <button type="button" class="btn btn-primary" id="contact-button">Submit</button>
                         </form>
