Added first three games

--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./portfolio.html">All Projects</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./portfolio.html#proj-1">Project 1</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-2">Project 2</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-3">Project 3</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-4">Project 4</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-5">Project 5</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-6">Project 6</a>
+                            <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="dropdown-item">Google Trivia Game</a>
+                            <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="dropdown-item" >Song Guess Game</a>
+                            <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="dropdown-item" >Crystal Collector</a>
                         </div>
                     </li>
                 </ul>
