--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./portfolio.html">All Projects</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./portfolio.html#proj-1">Project 1</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-2">Project 2</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-3">Project 3</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-4">Project 4</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-5">Project 5</a>
-                            <a class="dropdown-item" href="./portfolio.html#proj-6">Project 6</a>
+                            <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="dropdown-item">Google Trivia Game</a>
+                            <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="dropdown-item" >Song Guess Game</a>
+                            <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="dropdown-item" >Crystal Collector</a>
                         </div>
                     </li>
                 </ul>
@@ -62,75 +59,49 @@
                         <h1>Portfolio</h1>
                     </div>
                 </div>
+
+                <!-- Portfolio photos are 500x280px -->
                 <div class="row">
+
+                    <!-- Google Trivia -->
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container" id="proj-1">
+                        <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="single-project-container" id="proj-1">
                             <figure class="mb-4">
-                                <img src="./images/mountains1.jpg" alt="mountains1">
+                                <img src="./images/googleTrivia.jpg" alt="Google Trivia game">
                                 <figcaption>
-                                    <h2>Project one</h2>
-                                    <p class="text-muted">Project one's description. Lorem ipsum dolor sit amet.</p>
+                                    <h2>Google Trivia Game</h2>
+                                    <p class="text-muted">Trivia game based on Google's history.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
+
+                    <!-- Hangman Game -->
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container" id="proj-2">
+                        <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="single-project-container" id="proj-2">
                             <figure class="mb-4">
-                                <img src="./images/mountains2.jpg" alt="mountains1">
+                                <img src="./images/songGuess.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Project two</h2>
-                                    <p class="text-muted">Project two's description. Lorem ipsum dolor sit amet.</p>
+                                    <h2>Song Guess Game</h2>
+                                    <p class="text-muted">Hang-man like game about guessing song titles.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
+
+                    <!-- Crystal Collector -->
                     <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container" id="proj-3">
+                        <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="single-project-container" id="proj-3">
                             <figure class="mb-4">
-                                <img src="./images/mountains3.jpg" alt="mountains1">
+                                <img src="./images/crystalCollector.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Project three</h2>
-                                    <p class="text-muted">Project three's description. Lorem, ipsum dolor sit amet consectetur adipisicing.
-                                    </p>
+                                    <h2>Crystal Collector Game</h2>
+                                    <p class="text-muted">Mathematical and memory game about lining up numbers.</p>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container" id="proj-4">
-                            <figure class="mb-4">
-                                <img src="./images/mountains4.jpg" alt="mountains1">
-                                <figcaption>
-                                    <h2>Project four</h2>
-                                    <p class="text-muted">Project four's description. Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit. Non.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container" id="proj-5">
-                            <figure class="mb-4">
-                                <img src="./images/mountains1.jpg" alt="mountains1">
-                                <figcaption>
-                                    <h2>Project five</h2>
-                                    <p class="text-muted">Project five's description. Lorem, ipsum dolor.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="col-12 col-sm-6">
-                        <a href="#" class="single-project-container" id="proj-6">
-                            <figure class="mb-4">
-                                <img src="./images/mountains2.jpg" alt="mountains1">
-                                <figcaption>
-                                    <h2>Project six</h2>
-                                    <p class="text-muted">Project six's description. Lorem ipsum dolor sit amet.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
+
                 </div>
             </div>
         </div>
