Added giphy portfolio peice

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./portfolio.html">All Projects</a>
                             <div class="dropdown-divider"></div>
+                            <a href="https://graysonlee123.github.io/giphy-api/" target="_blank" class="dropdown-item">Giphy Search</a>
                             <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="dropdown-item">Google Trivia Game</a>
                             <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="dropdown-item" >Song Guess Game</a>
                             <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="dropdown-item" >Crystal Collector</a>
@@ -64,8 +65,21 @@
                 <div class="row">
 
                     <!-- Google Trivia -->
+
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="single-project-container" id="proj-1">
+                        <a href="https://graysonlee123.github.io/giphy-api/" target="_blank" class="single-project-container" id="proj-1">
+                            <figure class="mb-4">
+                                <img src="./images/giphy.jpg" alt="Giphy Search">
+                                <figcaption>
+                                    <h2>Giphy Search</h2>
+                                    <p class="text-muted">Search for Gifs using the Giphy API</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    
+                    <div class="col-12 col-sm-6">
+                        <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="single-project-container" id="proj-2">
                             <figure class="mb-4">
                                 <img src="./images/googleTrivia.jpg" alt="Google Trivia game">
                                 <figcaption>
@@ -78,7 +92,7 @@
 
                     <!-- Hangman Game -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="single-project-container" id="proj-2">
+                        <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="single-project-container" id="proj-3">
                             <figure class="mb-4">
                                 <img src="./images/songGuess.jpg" alt="mountains1">
                                 <figcaption>
@@ -91,7 +105,7 @@
 
                     <!-- Crystal Collector -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="single-project-container" id="proj-3">
+                        <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="single-project-container" id="proj-4">
                             <figure class="mb-4">
                                 <img src="./images/crystalCollector.jpg" alt="mountains1">
                                 <figcaption>
