--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./portfolio.html">All Projects</a>
                             <div class="dropdown-divider"></div>
+                            <a href="https://graysonlee123.github.io/giphy-api/" target="_blank" class="dropdown-item">Giphy Search</a>
                             <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="dropdown-item">Google Trivia Game</a>
                             <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="dropdown-item" >Song Guess Game</a>
                             <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="dropdown-item" >Crystal Collector</a>
