--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
 
                     <!-- Crystal Collector -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="single-project-container" id="proj-4">
+                        <a href="https://github.com/graysonlee123/Crystal-Game" target="_blank" class="single-project-container" id="proj-4">
                             <figure class="mb-4">
                                 <img src="./images/crystalCollector.jpg" alt="mountains1">
                                 <figcaption>
