Made links in URL dropdown generate with JS

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,9 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Projects
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu" id="dropdown" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./portfolio.html">All Projects</a>
                             <div class="dropdown-divider"></div>
-                            <a href="https://graysonlee123.github.io/giphy-api/" target="_blank" class="dropdown-item">Giphy Search</a>
-                            <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="dropdown-item">Google Trivia Game</a>
-                            <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="dropdown-item" >Song Guess Game</a>
-                            <a href="https://graysonlee123.github.io/unit-4-game/" target="_blank" class="dropdown-item" >Crystal Collector</a>
                         </div>
                     </li>
                 </ul>
@@ -67,7 +63,7 @@
                     <!-- Google Trivia -->
 
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/giphy-api/" target="_blank" class="single-project-container" id="proj-1">
+                        <a href="https://github.com/graysonlee123/Giphy-Search" target="_blank" class="single-project-container" id="proj-1">
                             <figure class="mb-4">
                                 <img src="./images/giphy.jpg" alt="Giphy Search">
                                 <figcaption>
@@ -134,6 +130,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./javascript/main.js"></script>
 </body>
 
 </html>
