Fixed links for portfolio items on portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                     </div>
                     
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/Google-Trivia/" target="_blank" class="single-project-container" id="proj-2">
+                        <a href="https://github.com/graysonlee123/Google-Trivia" target="_blank" class="single-project-container" id="proj-2">
                             <figure class="mb-4">
                                 <img src="./images/googleTrivia.jpg" alt="Google Trivia game">
                                 <figcaption>
@@ -88,11 +88,11 @@
 
                     <!-- Hangman Game -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://graysonlee123.github.io/Word-Guess-Game/" target="_blank" class="single-project-container" id="proj-3">
+                        <a href="https://github.com/graysonlee123/Music-Hangman" target="_blank" class="single-project-container" id="proj-3">
                             <figure class="mb-4">
                                 <img src="./images/songGuess.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Song Guess Game</h2>
+                                    <h2>Music Hangman</h2>
                                     <p class="text-muted">Hang-man like game about guessing song titles.</p>
                                 </figcaption>
                             </figure>
@@ -101,7 +101,7 @@
 
                     <!-- Crystal Collector -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Crystal-Game" target="_blank" class="single-project-container" id="proj-4">
+                        <a href="https://github.com/graysonlee123/Crystal-Collector" target="_blank" class="single-project-container" id="proj-4">
                             <figure class="mb-4">
                                 <img src="./images/crystalCollector.jpg" alt="mountains1">
                                 <figcaption>
