Added github link and resume link download

--- a/contact.html
+++ b/contact.html
@@ -89,10 +89,12 @@
                         <p>Feel free to contact me at any time. I usually respond within a day or two.</p>
                         <hr>
                         <p>Find me on these sites:</p>
+                        <a href="https://github.com/graysonlee123" target="_blank" class="social-icon"><i
+                            class="fab fa-github-square" style="font-size: 3rem;"></i></a>
                         <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i
-                                class="fab fa-behance-square" style="font-size: 3rem; padding-right: 10px;"></i></a>
+                            class="fab fa-behance-square" style="font-size: 3rem;"></i></a>
                         <a href="http://www.linkedin.com/in/graysongantek" target="_blank" class="social-icon"><i
-                                class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
+                            class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
                     </div>
                 </div>
             </div>
