--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </div>
                             <div class="mb-4 col-6 col-md-12">
                                 <p class="about-p">Currently located in Dallas, Georgia.</p>
-                                <p></p>
+                                <p>Download my <a href="https://www.dropbox.com/s/f7greyngg7pd823/graysonGantek%20resume.pdf?dl=0">Resume</a></p>
                             </div>
                         </div>
                     </div>
