Added hearthstone helper

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,10 +60,26 @@
                 <!-- Portfolio photos are 500x280px -->
                 <div class="row">
 
+                    <!-- Hearthstone Helper -->
+
+                    <div class="col-12 col-sm-6">
+                        <a href="https://github.com/graysonlee123/Hearthsone-Helper" target="_blank"
+                            class="single-project-container" id="proj-1">
+                            <figure class="mb-4">
+                                <img src="./images/hearthstone-helper.jpg" alt="Giphy Search">
+                                <figcaption>
+                                    <h2>Hearthstone Helper</h2>
+                                    <p class="text-muted">An all-in-one site for watching and learning about Hearthstone.</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
                     <!-- Google Trivia -->
 
                     <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Giphy-Search" target="_blank" class="single-project-container" id="proj-1">
+                        <a href="https://github.com/graysonlee123/Giphy-Search" target="_blank"
+                            class="single-project-container" id="proj-2">
                             <figure class="mb-4">
                                 <img src="./images/giphy.jpg" alt="Giphy Search">
                                 <figcaption>
@@ -73,9 +89,10 @@
                             </figure>
                         </a>
                     </div>
-                    
+
                     <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Google-Trivia" target="_blank" class="single-project-container" id="proj-2">
+                        <a href="https://github.com/graysonlee123/Google-Trivia" target="_blank"
+                            class="single-project-container" id="proj-3">
                             <figure class="mb-4">
                                 <img src="./images/googleTrivia.jpg" alt="Google Trivia game">
                                 <figcaption>
@@ -88,7 +105,8 @@
 
                     <!-- Hangman Game -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Music-Hangman" target="_blank" class="single-project-container" id="proj-3">
+                        <a href="https://github.com/graysonlee123/Music-Hangman" target="_blank"
+                            class="single-project-container" id="proj-4">
                             <figure class="mb-4">
                                 <img src="./images/songGuess.jpg" alt="mountains1">
                                 <figcaption>
@@ -101,7 +119,8 @@
 
                     <!-- Crystal Collector -->
                     <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Crystal-Collector" target="_blank" class="single-project-container" id="proj-4">
+                        <a href="https://github.com/graysonlee123/Crystal-Collector" target="_blank"
+                            class="single-project-container" id="proj-5">
                             <figure class="mb-4">
                                 <img src="./images/crystalCollector.jpg" alt="mountains1">
                                 <figcaption>
