Added email and phone number

--- a/contact.html
+++ b/contact.html
@@ -80,21 +80,25 @@
                             </div>
                             <div class="form-group">
                                 <label for="contact-text-area">Message</label>
-                                <textarea class="form-control" id="contact-text-area" rows="6" placeholder="Your message here"></textarea>
+                                <textarea class="form-control" id="contact-text-area" rows="6"
+                                    placeholder="Your message here"></textarea>
                             </div>
                             <button type="button" class="btn btn-primary" id="contact-button">Submit</button>
                         </form>
                     </div>
                     <div class="col-12 col-md-4 text-muted text-right" id="contact-aside">
+                        <p>Email me at <a href="mailto:hello@graysongantek.com">hello@graysongantek.com</a> or
+                            call me directly at (770) 312-9238.</p>
+                        <hr>
                         <p>Feel free to contact me at any time. I usually respond within a day or two.</p>
                         <hr>
                         <p>Find me on these sites:</p>
                         <a href="https://github.com/graysonlee123" target="_blank" class="social-icon"><i
-                            class="fab fa-github-square" style="font-size: 3rem;"></i></a>
+                                class="fab fa-github-square" style="font-size: 3rem;"></i></a>
                         <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i
-                            class="fab fa-behance-square" style="font-size: 3rem;"></i></a>
+                                class="fab fa-behance-square" style="font-size: 3rem;"></i></a>
                         <a href="http://www.linkedin.com/in/graysongantek" target="_blank" class="social-icon"><i
-                            class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
+                                class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
                     </div>
                 </div>
             </div>
