Added quick change to index about section

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                                 <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
                             </div>
                             <div class="mb-4 col-6 col-md-12">
-                                <p class="about-p">Currently located in Dallas, Georgia.</p>
-                                <p>Download my <a href="https://www.dropbox.com/s/f7greyngg7pd823/graysonGantek%20resume.pdf?dl=0">Resume</a></p>
+                                <p class="about-p">Currently located in Dallas, Georgia. Download my resume <a href="https://www.dropbox.com/s/f7greyngg7pd823/graysonGantek%20resume.pdf?dl=0">here</a>.</p>
                             </div>
                         </div>
                     </div>
