--- a/portfolio.html
+++ b/portfolio.html
@@ -60,16 +60,32 @@
                 <!-- Portfolio photos are 500x280px -->
                 <div class="row">
 
+                    <!-- Liri Node App -->
+
+                    <div class="col-12 col-sm-6">
+                        <a href="https://github.com/graysonlee123/liri-node-app" target="_blank"
+                            class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/liriNodeApp.jpg" alt="Giphy Search">
+                                <figcaption>
+                                    <h2>Liri Node App</h2>
+                                    <p class="text-muted">A CLI app in which users can search songs, concerts, and movies.</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
                     <!-- Hearthstone Helper -->
 
                     <div class="col-12 col-sm-6">
                         <a href="https://github.com/graysonlee123/Hearthsone-Helper" target="_blank"
-                            class="single-project-container" id="proj-1">
+                            class="single-project-container">
                             <figure class="mb-4">
                                 <img src="./images/hearthstone-helper.jpg" alt="Giphy Search">
                                 <figcaption>
                                     <h2>Hearthstone Helper</h2>
-                                    <p class="text-muted">An all-in-one site for watching and learning about Hearthstone.</p>
+                                    <p class="text-muted">An all-in-one site for watching and learning about
+                                        Hearthstone.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -79,7 +95,7 @@
 
                     <div class="col-12 col-sm-6">
                         <a href="https://github.com/graysonlee123/Giphy-Search" target="_blank"
-                            class="single-project-container" id="proj-2">
+                            class="single-project-container">
                             <figure class="mb-4">
                                 <img src="./images/giphy.jpg" alt="Giphy Search">
                                 <figcaption>
@@ -92,7 +108,7 @@
 
                     <div class="col-12 col-sm-6">
                         <a href="https://github.com/graysonlee123/Google-Trivia" target="_blank"
-                            class="single-project-container" id="proj-3">
+                            class="single-project-container">
                             <figure class="mb-4">
                                 <img src="./images/googleTrivia.jpg" alt="Google Trivia game">
                                 <figcaption>
@@ -106,7 +122,7 @@
                     <!-- Hangman Game -->
                     <div class="col-12 col-sm-6">
                         <a href="https://github.com/graysonlee123/Music-Hangman" target="_blank"
-                            class="single-project-container" id="proj-4">
+                            class="single-project-container">
                             <figure class="mb-4">
                                 <img src="./images/songGuess.jpg" alt="mountains1">
                                 <figcaption>
@@ -120,7 +136,7 @@
                     <!-- Crystal Collector -->
                     <div class="col-12 col-sm-6">
                         <a href="https://github.com/graysonlee123/Crystal-Collector" target="_blank"
-                            class="single-project-container" id="proj-5">
+                            class="single-project-container">
                             <figure class="mb-4">
                                 <img src="./images/crystalCollector.jpg" alt="mountains1">
                                 <figcaption>
