automatically generate projects using javascript on portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,11 +58,11 @@
                 </div>
 
                 <!-- Portfolio photos are 500x280px -->
-                <div class="row">
+                <div class="row" id="projectsContainer">
 
-                    <!-- Liri Node App -->
+                    <!-- Example -->
 
-                    <div class="col-12 col-sm-6">
+                    <!-- <div class="col-12 col-sm-6">
                         <a href="https://github.com/graysonlee123/liri-node-app" target="_blank"
                             class="single-project-container">
                             <figure class="mb-4">
@@ -73,79 +73,7 @@
                                 </figcaption>
                             </figure>
                         </a>
-                    </div>
-
-                    <!-- Hearthstone Helper -->
-
-                    <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Hearthsone-Helper" target="_blank"
-                            class="single-project-container">
-                            <figure class="mb-4">
-                                <img src="./images/hearthstone-helper.jpg" alt="Giphy Search">
-                                <figcaption>
-                                    <h2>Hearthstone Helper</h2>
-                                    <p class="text-muted">An all-in-one site for watching and learning about
-                                        Hearthstone.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-
-                    <!-- Google Trivia -->
-
-                    <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Giphy-Search" target="_blank"
-                            class="single-project-container">
-                            <figure class="mb-4">
-                                <img src="./images/giphy.jpg" alt="Giphy Search">
-                                <figcaption>
-                                    <h2>Giphy Search</h2>
-                                    <p class="text-muted">Search for Gifs using the Giphy API</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-
-                    <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Google-Trivia" target="_blank"
-                            class="single-project-container">
-                            <figure class="mb-4">
-                                <img src="./images/googleTrivia.jpg" alt="Google Trivia game">
-                                <figcaption>
-                                    <h2>Google Trivia Game</h2>
-                                    <p class="text-muted">Trivia game based on Google's history.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-
-                    <!-- Hangman Game -->
-                    <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Music-Hangman" target="_blank"
-                            class="single-project-container">
-                            <figure class="mb-4">
-                                <img src="./images/songGuess.jpg" alt="mountains1">
-                                <figcaption>
-                                    <h2>Music Hangman</h2>
-                                    <p class="text-muted">Hang-man like game about guessing song titles.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-
-                    <!-- Crystal Collector -->
-                    <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/Crystal-Collector" target="_blank"
-                            class="single-project-container">
-                            <figure class="mb-4">
-                                <img src="./images/crystalCollector.jpg" alt="mountains1">
-                                <figcaption>
-                                    <h2>Crystal Collector Game</h2>
-                                    <p class="text-muted">Mathematical and memory game about lining up numbers.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -166,6 +94,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="./javascript/main.js"></script>
+    <script src="./javascript/generateProjects.js"></script>
+    <script>
+        generateProjects();
+    </script>
 </body>
 
 </html>
