--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="wrapper">
+        
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Grayson Gantek</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -56,28 +57,12 @@
                         <h1>Portfolio</h1>
                     </div>
                 </div>
-
-                <!-- Portfolio photos are 500x280px -->
                 <div class="row" id="projectsContainer">
-
-                    <!-- Example -->
-
-                    <!-- <div class="col-12 col-sm-6">
-                        <a href="https://github.com/graysonlee123/liri-node-app" target="_blank"
-                            class="single-project-container">
-                            <figure class="mb-4">
-                                <img src="./images/liriNodeApp.jpg" alt="Giphy Search">
-                                <figcaption>
-                                    <h2>Liri Node App</h2>
-                                    <p class="text-muted">A CLI app in which users can search songs, concerts, and movies.</p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div> -->
-
+                    <!-- Projects appear here -->
                 </div>
             </div>
         </div>
+
     </div>
 
     <footer class="bg-dark text-center text-light text-muted py-4 mt-4">
