--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Grayson Gantek</a>
+            <a class="navbar-brand" href="./index.html">Grayson Gantek</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
                 </ul>
                 <div class="dropdown-divider"></div>
                 <span class="navbar-text">
-                    <em>Designer and Developer</em>
+                    <em>Web Designer and Developer</em>
                 </span>
             </div>
         </nav>
@@ -121,6 +121,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./javascript/projects.js"></script>
     <script src="./javascript/main.js"></script>
 </body>
 
